--- a/app/src/main/res/navigation/pokemon_nav.xml
+++ b/app/src/main/res/navigation/pokemon_nav.xml
@@ -18,5 +18,19 @@
         android:id="@+id/pokemonListFragment"
         android:name="com.example.pokemon.ui.view.pokemon.PokemonListFragment"
         android:label="pokemon_list_fragment"
-        tools:layout="@layout/pokemon_list_fragment" />
+        tools:layout="@layout/pokemon_list_fragment" >
+        <action
+            android:id="@+id/action_pokemonListFragment_to_pokemonDetailFragment"
+            app:destination="@id/pokemonDetailFragment"
+            app:popUpTo="@id/pokemonListFragment"
+            app:enterAnim="@anim/enter_from_right_slide"
+            app:exitAnim="@anim/exit_left_slide"
+            app:popEnterAnim="@anim/enter_from_left_slide"
+            app:popExitAnim="@anim/exit_right_slide" />
+    </fragment>
+    <fragment
+        android:id="@+id/pokemonDetailFragment"
+        android:name="com.example.pokemon.ui.view.pokemon.PokemonDetailFragment"
+        android:label="pokemon_detail_fragment"
+        tools:layout="@layout/pokemon_detail_fragment" />
 </navigation>
