add page detail with databinding

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,19 @@
         <item name="android:fontFamily">@font/pokemon_hollow</item>
     </style>
 
+
+
+    <style name="label_text">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:fontFamily">@font/pokemon_hollow</item>
+    </style>
+
+    <style name="value_text">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:fontFamily">@font/pokemon_solid</item>
+    </style>
     <!--ACTION BAR -->
 
     <style name="Theme.AppLib.ActionBar.Solid" parent="@style/Widget.AppCompat.Light.ActionBar.Solid">
