--- a/app/src/main/res/layout/pokemon_detail_fragment.xml
+++ b/app/src/main/res/layout/pokemon_detail_fragment.xml
@@ -1,14 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.view.MainActivity">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
 
-    <TextView
+        <variable
+            name="pokemon"
+            type="com.example.entity.PokemonEntity" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/pokemon_detail" />
+        android:padding="@dimen/standard_padding"
+        tools:context=".ui.view.MainActivity">
 
-</FrameLayout>
+        <ImageView
+            android:id="@+id/image_iv"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/label_experience_tv"
+            style="@style/label_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/half_standard_distance"
+            android:text="@string/label_base_experience"
+            app:layout_constraintStart_toEndOf="@+id/image_iv"
+            app:layout_constraintTop_toTopOf="@+id/image_iv" />
+
+        <TextView
+            android:id="@+id/label_height_tv"
+            style="@style/label_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/half_standard_distance"
+            android:text="@string/label_height"
+            app:layout_constraintBottom_toTopOf="@+id/label_weight_tv"
+            app:layout_constraintStart_toEndOf="@+id/image_iv"
+            app:layout_constraintTop_toBottomOf="@+id/label_experience_tv" />
+
+
+        <TextView
+            android:id="@+id/label_weight_tv"
+            style="@style/label_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/half_standard_distance"
+            android:text="@string/label_weight"
+            app:layout_constraintBottom_toBottomOf="@+id/image_iv"
+            app:layout_constraintStart_toEndOf="@+id/image_iv" />
+
+
+        <TextView
+            android:id="@+id/experience_tv"
+            style="@style/value_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text='@{pokemon.baseExperience.toString(), default="N/A"}'
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/label_experience_tv"
+            tools:text="3" />
+
+        <TextView
+            android:id="@+id/height_tv"
+            style="@style/value_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text='@{pokemon.height.toString(), default="N/A"  }'
+
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/label_height_tv"
+            tools:text="3" />
+
+
+        <TextView
+            android:id="@+id/weight_tv"
+            style="@style/value_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text='@{pokemon.weight.toString(), default="N/A"}'
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/label_weight_tv"
+            tools:text="1" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
