--- a/app/src/main/res/layout/pokemon_detail_fragment.xml
+++ b/app/src/main/res/layout/pokemon_detail_fragment.xml
@@ -9,109 +9,117 @@
             type="com.example.entity.PokemonEntity" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="@dimen/standard_padding"
-        tools:context=".ui.view.MainActivity">
+  <ScrollView
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content">
+      <androidx.constraintlayout.widget.ConstraintLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:padding="@dimen/standard_padding"
+          tools:context=".ui.view.MainActivity">
 
-        <ImageView
-            android:id="@+id/image_iv"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+          <ImageView
+              android:id="@+id/image_iv"
+              android:layout_width="150dp"
+              android:layout_height="150dp"
 
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+              app:layout_constraintStart_toStartOf="parent"
+              app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/label_experience_tv"
-            style="@style/label_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/half_standard_distance"
-            android:text="@string/label_base_experience"
-            app:layout_constraintStart_toEndOf="@+id/image_iv"
-            app:layout_constraintTop_toTopOf="@+id/image_iv" />
+          <TextView
+              android:id="@+id/label_experience_tv"
+              style="@style/label_text"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_marginStart="@dimen/half_standard_distance"
+              android:text="@string/label_base_experience"
+              app:layout_constraintStart_toEndOf="@+id/image_iv"
+              app:layout_constraintTop_toTopOf="@+id/image_iv" />
 
-        <TextView
-            android:id="@+id/label_height_tv"
-            style="@style/label_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/half_standard_distance"
-            android:text="@string/label_height"
-            app:layout_constraintBottom_toTopOf="@+id/label_weight_tv"
-            app:layout_constraintStart_toEndOf="@+id/image_iv"
-            app:layout_constraintTop_toBottomOf="@+id/label_experience_tv" />
-
-
-        <TextView
-            android:id="@+id/label_weight_tv"
-            style="@style/label_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/half_standard_distance"
-            android:text="@string/label_weight"
-            app:layout_constraintBottom_toBottomOf="@+id/image_iv"
-            app:layout_constraintStart_toEndOf="@+id/image_iv" />
+          <TextView
+              android:id="@+id/label_height_tv"
+              style="@style/label_text"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_marginStart="@dimen/half_standard_distance"
+              android:text="@string/label_height"
+              app:layout_constraintBottom_toTopOf="@+id/label_weight_tv"
+              app:layout_constraintStart_toEndOf="@+id/image_iv"
+              app:layout_constraintTop_toBottomOf="@+id/label_experience_tv" />
 
 
-        <TextView
-            android:id="@+id/experience_tv"
-            style="@style/value_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:text='@{pokemon.baseExperience.toString(), default="N/A"}'
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/label_experience_tv"
-            tools:text="3" />
-
-        <TextView
-            android:id="@+id/height_tv"
-            style="@style/value_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text='@{pokemon.height.toString(), default="N/A"  }'
-
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/label_height_tv"
-            tools:text="3" />
+          <TextView
+              android:id="@+id/label_weight_tv"
+              style="@style/label_text"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_marginStart="@dimen/half_standard_distance"
+              android:text="@string/label_weight"
+              app:layout_constraintBottom_toBottomOf="@+id/image_iv"
+              app:layout_constraintStart_toEndOf="@+id/image_iv" />
 
 
-        <TextView
-            android:id="@+id/weight_tv"
-            style="@style/value_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text='@{pokemon.weight.toString(), default="N/A"}'
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/label_weight_tv"
-            tools:text="1" />
+          <TextView
+              android:id="@+id/experience_tv"
+              style="@style/value_text"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
 
-        <TextView
-            android:id="@+id/label_stats_tv"
-            style="@style/label_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:text="@string/label_stats"
-            app:layout_constraintTop_toBottomOf="@+id/image_iv" />
+              android:text='@{pokemon.baseExperience.toString(), default="N/A"}'
+              app:layout_constraintEnd_toEndOf="parent"
+              app:layout_constraintTop_toBottomOf="@+id/label_experience_tv"
+              tools:text="3" />
 
-<!--
+          <TextView
+              android:id="@+id/height_tv"
+              style="@style/value_text"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:text='@{pokemon.height.toString(), default="N/A"  }'
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/stats_rv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:items="@{stat}"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/label_stats_tv"
-            tools:listitem="@layout/sats_item" />
--->
+              app:layout_constraintEnd_toEndOf="parent"
+              app:layout_constraintTop_toBottomOf="@+id/label_height_tv"
+              tools:text="3" />
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+          <TextView
+              android:id="@+id/weight_tv"
+              style="@style/value_text"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:text='@{pokemon.weight.toString(), default="N/A"}'
+              app:layout_constraintEnd_toEndOf="parent"
+              app:layout_constraintTop_toBottomOf="@+id/label_weight_tv"
+              tools:text="1" />
+
+          <TextView
+              android:id="@+id/label_stats_tv"
+              style="@style/label_title"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              app:layout_constraintEnd_toEndOf="parent"
+              app:layout_constraintStart_toStartOf="parent"
+              android:text="@string/label_stats"
+              app:layout_constraintTop_toBottomOf="@+id/image_iv" />
+
+
+
+          <androidx.recyclerview.widget.RecyclerView
+              android:id="@+id/stats_rv"
+              android:overScrollMode="never"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+              app:layout_constraintEnd_toEndOf="parent"
+              app:layout_constraintStart_toStartOf="parent"
+              app:layout_constraintTop_toBottomOf="@+id/label_stats_tv"
+              tools:listitem="@layout/stat_item" />
+
+
+
+      </androidx.constraintlayout.widget.ConstraintLayout>
+
+  </ScrollView>
+
+
 </layout>
