--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,21 +9,20 @@
         <item name="android:fontFamily">@font/pokemon_hollow</item>
     </style>
     <style name="list_item_text_small" parent="list_item_text">
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">12sp</item>
     </style>
-
-
 
     <style name="label_text">
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">20sp</item>
         <item name="android:fontFamily">@font/pokemon_hollow</item>
     </style>
-    <style name="label_title" parent="label_text">
+    <style name="label_title"  >
+        <item name="android:textSize">28sp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:fontFamily">@font/pokemon_solid</item>
+        <item name="android:padding">@dimen/standard_distance</item>
 
-        <item name="android:textSize">24sp</item>
-        <item name="android:layout_marginBottom">10dp</item>
-        <item name="android:layout_marginTop">10dp</item>
 
     </style>
     <style name="value_text">
