--- a/app/src/main/res/layout/pokemon_detail_fragment.xml
+++ b/app/src/main/res/layout/pokemon_detail_fragment.xml
@@ -115,7 +115,26 @@
               app:layout_constraintTop_toBottomOf="@+id/label_stats_tv"
               tools:listitem="@layout/stat_item" />
 
+          <TextView
+              android:id="@+id/label_type_tv"
+              style="@style/label_title"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:text="@string/label_type"
+              app:layout_constraintEnd_toEndOf="parent"
+              app:layout_constraintStart_toStartOf="parent"
+              app:layout_constraintTop_toBottomOf="@+id/stats_rv" />
 
+          <androidx.recyclerview.widget.RecyclerView
+              android:id="@+id/types_rv"
+              android:overScrollMode="never"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+              app:layout_constraintEnd_toEndOf="parent"
+              app:layout_constraintStart_toStartOf="parent"
+              app:layout_constraintTop_toBottomOf="@+id/label_type_tv"
+              tools:listitem="@layout/type_item" />
 
       </androidx.constraintlayout.widget.ConstraintLayout>
 
